--- a/index.html
+++ b/index.html
@@ -938,44 +938,6 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
               </div>
             </div> -->
 
-<!--             <div class="col-md-3 py-3">
-              <div class="card card-body card-hover bg-light border-0 text-center mx-2">
-                <img src="../assets/img/speaker/orazio_gallo.jpg" class="d-block rounded-circle mx-auto mb-3" width="162" alt="Ralph Edwards">
-                <h5 class="fw-medium fs-lg mb-1">Orazio Gallo</h5>
-                <p class="fs-sm mb-3">Principal Research Scientist<br>NVIDIA </p>
-                <div class="d-flex justify-content-center">
-                  <a href="https://oraziogallo.github.io/" class="btn btn-icon btn-outline-secondary btn-facebook btn-sm me-2" target="_blank">
-                    <i class="bx bx-home"></i>
-                  </a>
-                  <a href="https://scholar.google.com/citations?hl=en&user=6UHjQQYAAAAJ" class="btn btn-icon btn-outline-secondary btn-linkedin btn-sm me-2" target="_blank">
-                    <i class="bx bxl-google"></i>
-                  </a>
-                  <a href="mailto:oraziogallo@soe.ucsc.edu" class="btn btn-icon btn-outline-secondary btn-linkedin btn-sm me-2" target="_blank">
-                    <i class="bx bx-envelope"></i>
-                  </a>
-                </div>
-              </div>
-            </div> -->
-
-<!--             <div class="col-md-3 py-3">
-              <div class="card card-body card-hover bg-light border-0 text-center mx-2">
-                <img src="../assets/img/speaker/sabine_susstrunk.jpg" class="d-block rounded-circle mx-auto mb-3" width="162" alt="Ralph Edwards">
-                <h5 class="fw-medium fs-lg mb-1">Sabine Süsstrunk</h5>
-                <p class="fs-sm mb-3">Professor<br>EPFL </p>
-                <div class="d-flex justify-content-center">
-                  <a href="https://people.epfl.ch/sabine.susstrunk?lang=en/" class="btn btn-icon btn-outline-secondary btn-facebook btn-sm me-2" target="_blank">
-                    <i class="bx bx-home"></i>
-                  </a>
-                  <a href="https://scholar.google.com/citations?hl=en&user=EX3OYP4AAAAJ" class="btn btn-icon btn-outline-secondary btn-linkedin btn-sm me-2" target="_blank">
-                    <i class="bx bxl-google"></i>
-                  </a>
-                  <a href="mailto:sabine.susstrunk@epfl.ch" class="btn btn-icon btn-outline-secondary btn-linkedin btn-sm me-2" target="_blank">
-                    <i class="bx bx-envelope"></i>
-                  </a>
-                </div>
-              </div>
-            </div> -->
-
           </div>
         </div>
       </section>
@@ -994,7 +956,9 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
               <div class="col-md-3 py-3">
                 <div class="card card-body card-hover bg-light border-0 text-center mx-2">
                   <img src="../data/fangneng.jpeg" class="d-block rounded-circle mx-auto mb-3" width="162" alt="Ralph Edwards">
-                  <h5 class="fw-medium fs-lg mb-1">Fangneng Zhan</h5>
+                  <h5 class="fw-medium fs-lg mb-1"><a style="text-decoration:none" href="https://fnzhan.com/" target="_blank">Fangneng Zhan</a></h5>
+<!-- 			<a style="text-decoration:none" href="https://fnzhan.com/" target="_blank"> -->
+<!--                               <span style="font-size: 12pt">Fangneng Zhan</span></a> -->
                   <p class="fs-sm mb-3">MPI-INF</p>
                   <div class="d-flex justify-content-center">
                     <a href="https://fnzhan.com/" class="btn btn-icon btn-outline-secondary btn-facebook btn-sm me-2" target="_blank">
