--- a/index.html
+++ b/index.html
@@ -326,8 +326,11 @@
           <h2 class="text-center text-sm-start pb-2 pb-lg-0">Challenge Tracks</h2>
         </div> -->
         <div class="row">
+	  <div class="row pt-4 pb-3">
+            <h2 class="text-center text-sm-start pb-2 pb-lg-0">Overview</h2>
+          </div>
           <!-- Item -->
-          <h3>Overview</h3>
+<!--           <h3>Overview</h3> -->
           <div class="col">
             <p>
               As an expansion of physical fields into the realm of artificial intelligence, neural fields have shown intriguing success in computer vision, computer graphic, robotics, etc. 
@@ -424,9 +427,9 @@
           <div class="row pt-4 pb-3">
             <h2 class="text-center text-sm-start pb-2 pb-lg-0">Call for Papers</h2>
           </div>
-          <div class="row pt-4 pb-3">
+<!--           <div class="row pt-4 pb-3">
             <h4 class="text-center text-sm-start pb-2 pb-lg-0">NeurIPS 2023 Workshop:</h4>
-          </div>
+          </div> -->
           <div class="row">
             <div class="col">
                 <p>
