--- a/index.html
+++ b/index.html
@@ -960,20 +960,7 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
                 <div class="card card-body card-hover bg-light border-0 text-center mx-2">
                   <img src="../data/fangneng.jpeg" class="d-block rounded-circle mx-auto mb-3" width="162" alt="Ralph Edwards">
                   <h5 class="fw-medium fs-lg mb-1"><a style="text-decoration:none" href="https://fnzhan.com/" target="_blank">Fangneng Zhan</a></h5>
-<!-- 			<a style="text-decoration:none" href="https://fnzhan.com/" target="_blank"> -->
-<!--                               <span style="font-size: 12pt">Fangneng Zhan</span></a> -->
                   <p class="fs-sm mb-3">MPI-INF</p>
-                  <div class="d-flex justify-content-center">
-                    <a href="https://fnzhan.com/" class="btn btn-icon btn-outline-secondary btn-facebook btn-sm me-2" target="_blank">
-                      <i class="bx bx-home"></i>
-                    </a>
-                    <a href="https://scholar.google.com/citations?user=1_I0P-AAAAAJ" class="btn btn-icon btn-outline-secondary btn-linkedin btn-sm me-2" target="_blank">
-                      <i class="bx bxl-google"></i>
-                    </a>
-                    <a href="mailto:chongyi.li at ntu.edu.sg" class="btn btn-icon btn-outline-secondary btn-linkedin btn-sm me-2" target="_blank">
-                      <i class="bx bx-envelope"></i>
-                    </a>
-                  </div>
                 </div>
               </div>
   
@@ -981,19 +968,8 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
               <div class="col-md-3 py-3">
                 <div class="card card-body card-hover bg-light border-0 text-center mx-2">
                   <img src="../data/adam.jpeg" class="d-block rounded-circle mx-auto mb-3" width="162" alt="Ralph Edwards">
-                  <h5 class="fw-medium fs-lg mb-1">Adam Kortylewski</h5>
-                  <p class="fs-sm mb-3">MPI-INF</p>
-                  <div class="d-flex justify-content-center">
-                    <a href="https://shangchenzhou.com/" class="btn btn-icon btn-outline-secondary btn-facebook btn-sm me-2" target="_blank">
-                      <i class="bx bx-home"></i>
-                    </a>
-                    <a href="https://scholar.google.com/citations?user=suaDwBQAAAAJ" class="btn btn-icon btn-outline-secondary btn-linkedin btn-sm me-2" target="_blank">
-                      <i class="bx bxl-google"></i>
-                    </a>
-                    <a href="mailto:shangchenzhou@gmail.com" class="btn btn-icon btn-outline-secondary btn-linkedin btn-sm me-2" target="_blank">
-                      <i class="bx bx-envelope"></i>
-                    </a>
-                  </div>
+                  <h5 class="fw-medium fs-lg mb-1"><a style="text-decoration:none" href="https://gvrl.mpi-inf.mpg.de/" target="_blank">Adam Kortylewski</a></h5>
+                  <p class="fs-sm mb-3">MPI-INF & University of Freiburg</p>
                 </div>
               </div>
   
@@ -1001,36 +977,16 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
               <div class="col-md-3 py-3">
                 <div class="card card-body card-hover bg-light border-0 text-center mx-2">
                   <img src="../data/anpei.jpg" class="d-block rounded-circle mx-auto mb-3" width="162" alt="Ralph Edwards">
-                  <h5 class="fw-medium fs-lg mb-1">Anpei Chen</h5>
+                  <h5 class="fw-medium fs-lg mb-1"><a style="text-decoration:none" href="https://apchenstu.github.io/" target="_blank">Anpei Chen</a></h5>
                   <p class="fs-sm mb-3">ETH Zurich</p>
-                  <div class="d-flex justify-content-center">
-                    <a href="https://jnjaby.github.io/" class="btn btn-icon btn-outline-secondary btn-facebook btn-sm me-2" target="_blank">
-                      <i class="bx bx-home"></i>
-                    </a>
-                    <a href="https://scholar.google.com.sg/citations?user=nDrw-wwAAAAJ" class="btn btn-icon btn-outline-secondary btn-linkedin btn-sm me-2" target="_blank">
-                      <i class="bx bxl-google"></i>
-                    </a>
-                    <a href="mailto:ruicheng002@ntu.edu.sg" class="btn btn-icon btn-outline-secondary btn-linkedin btn-sm me-2" target="_blank">
-                      <i class="bx bx-envelope"></i>
-                    </a>
-                  </div>
                 </div>
               </div>
   
-              <!-- Item -->
               <div class="col-md-3 py-3">
                 <div class="card card-body card-hover bg-light border-0 text-center mx-2">
                   <img src="../data/ayush.jpg" class="d-block rounded-circle mx-auto mb-3" width="162" alt="Ralph Edwards">
-                  <h5 class="fw-medium fs-lg mb-1">Ayush Tewari</h5>
+                  <h5 class="fw-medium fs-lg mb-1"><a style="text-decoration:none" href="https://ayushtewari.com/" target="_blank">Ayush Tewari</a></h5>
                   <p class="fs-sm mb-3">MIT</p>
-                  <div class="d-flex justify-content-center">
-                    <a href="https://scholar.google.com.sg/citations?user=UyKX7ZsAAAAJ" class="btn btn-icon btn-outline-secondary btn-linkedin btn-sm me-2" target="_blank">
-                      <i class="bx bxl-google"></i>
-                    </a>
-                    <a href="mailto:YDAI005@ntu.edu.sg" class="btn btn-icon btn-outline-secondary btn-linkedin btn-sm me-2" target="_blank">
-                      <i class="bx bx-envelope"></i>
-                    </a>
-                  </div>
                 </div>
               </div>
 		  
@@ -1038,16 +994,8 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
 	      <div class="col-md-3 py-3">
                 <div class="card card-body card-hover bg-light border-0 text-center mx-2">
                   <img src="../data/siyu.jpg" class="d-block rounded-circle mx-auto mb-3" width="162">
-                  <h5 class="fw-medium fs-lg mb-1">Siyu Tang</h5>
+                  <h5 class="fw-medium fs-lg mb-1"><a style="text-decoration:none" href="https://vlg.inf.ethz.ch/team/Prof-Dr-Siyu-Tang.html" target="_blank">Siyu Tang</a></h5>
                   <p class="fs-sm mb-3">ETH Zurich</p>
-                  <div class="d-flex justify-content-center">
-                    <a href="https://scholar.google.com/citations?user=B7roEzMAAAAJ" class="btn btn-icon btn-outline-secondary btn-linkedin btn-sm me-2" target="_blank">
-                      <i class="bx bxl-google"></i>
-                    </a>
-                    <a href="mailto:zhuqingpeng@tetras.ai" class="btn btn-icon btn-outline-secondary btn-linkedin btn-sm me-2" target="_blank">
-                      <i class="bx bx-envelope"></i>
-                    </a>
-                  </div>
                 </div>
               </div>
 		  
@@ -1055,16 +1003,8 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
               <div class="col-md-3 py-3">
                 <div class="card card-body card-hover bg-light border-0 text-center mx-2">
                   <img src="../data/christian.png" class="d-block rounded-circle mx-auto mb-3" width="162">
-                  <h5 class="fw-medium fs-lg mb-1">Christian Theobalt</h5>
+                  <h5 class="fw-medium fs-lg mb-1"><a style="text-decoration:none" href="https://people.mpi-inf.mpg.de/~theobalt/" target="_blank">Christian Theobalt</a></h5>
                   <p class="fs-sm mb-3">MPI-INF</p>
-                  <div class="d-flex justify-content-center">
-                    <a href="https://scholar.google.com/citations?user=B7roEzMAAAAJ" class="btn btn-icon btn-outline-secondary btn-linkedin btn-sm me-2" target="_blank">
-                      <i class="bx bxl-google"></i>
-                    </a>
-                    <a href="mailto:zhuqingpeng@tetras.ai" class="btn btn-icon btn-outline-secondary btn-linkedin btn-sm me-2" target="_blank">
-                      <i class="bx bx-envelope"></i>
-                    </a>
-                  </div>
                 </div>
               </div>
 
@@ -1180,7 +1120,7 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
         </div>
         <p class="text-center text-light mt-lg-4 mb-0 opacity-90">
           Contact: 
-          <a href="mailto:mipi.challenge@gmail.com">fzhan@mpi-inf.mpg.com</a>
+          <a href="mailto:mipi.challenge@gmail.com">fzhan@mpi-inf.mpg.de</a>
         </div>
         <p class="fs-sm text-center pt-3 mt-lg-4 mb-0 opacity-90">
           <span class="text-light"> Copyright &copy; Neural Fields in Principle 2023
