--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <!-- SEO Meta Tags -->
     <meta name="description" content="NeurIPS 2023 Workshop">
-    <meta name="keywords" content="bootstrap, business, creative agency, mobile app showcase, saas, fintech, finance, online courses, software, medical, conference landing, services, e-commerce, shopping cart, multipurpose, shop, ui kit, marketing, seo, landing, blog, portfolio, html5, css3, javascript, gallery, slider, touch, creative">
+    <meta name="keywords" content="bootstrap, business, creative">
     <meta name="author" content="Createx Studio">
 	  
 	  
@@ -949,7 +949,7 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
                 <div class="card card-body card-hover bg-light border-0 text-center mx-2">
                   <img src="../data/adam.jpeg" class="d-block rounded-circle mx-auto mb-3" width="162" alt="Ralph Edwards">
                   <h5 class="fw-medium fs-lg mb-1"><a style="text-decoration:none" href="https://gvrl.mpi-inf.mpg.de/" target="_blank">Adam Kortylewski</a></h5>
-                  <p class="fs-sm mb-3">MPI-INF & University of Freiburg</p>
+                  <p class="fs-sm mb-3">MPI-INF & Uni of Freiburg</p>
                 </div>
               </div>
   
@@ -970,7 +970,7 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
               </div>
 	  </div>
 		
-	  <div class="row">
+	  <div class="row justify-content-center">
 	      <div class="col-md-3 py-3">
                 <div class="card card-body card-hover bg-light border-0 text-center mx-2">
                   <img src="../data/siyu.jpg" class="d-block rounded-circle mx-auto mb-3" width="162">
