--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
           <!-- Item -->
 <!--           <h3>Overview</h3> -->
           <div class="col">
-            <p>
+            <p align="justify">
               As an expansion of physical fields into the realm of artificial intelligence, neural fields have shown intriguing success in computer vision, computer graphic, robotics, etc. 
               However, while existing works have focused on demonstrating the capabilities of neural fields, there has been less emphasis on understanding the fundamental principles that 
               underlie the observed experimental phenomena. By drawing inspiration from physical fields where numerous fundamental principles has been rigorously derived and built, this 
