--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
       footer {
         /*background-color: #131022;*/
-        background-image: url(../assets/img/backgrounds/footer-bg.jpg);
+/*         background-image: url(../assets/img/backgrounds/footer-bg.jpg); */
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
