--- a/index.html
+++ b/index.html
@@ -1075,10 +1075,11 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
   </main>
     <!-- Footer -->
     <footer class="footer dark-mode bg-dark pt-5 pb-4 pb-lg-5">
-        <div class="container text-center pt-lg-3 opacity-90">
+      <div class="container text-center pt-lg-3 opacity-90">
         <div class="navbar-brand justify-content-center text-dark mb-2 mb-lg-4">
           <img src="../assets/img/logo.png" class="me-2" width="50" alt="Logo">
           <span class="fs-4">Neural Fields in Principle</span>
+	</div>
         <p class="text-center text-light mt-lg-4 mb-0 opacity-90">
           Contact: 
           <a href="mailto:mipi.challenge@gmail.com">fzhan@mpi-inf.mpg.de</a>
