--- a/index.html
+++ b/index.html
@@ -514,17 +514,13 @@
           <div class="col-12">
             <h2 class="text-center text-sm-start pb-2 pb-lg-0 mb-4 mb-lg-5">Important Dates</h2>
           </div>
-          <div class="col-lg-2 mb-3">
-            <!-- Nav tabs -->
+<!--           <div class="col-lg-2 mb-3">
             <div class="nav flex-nowrap flex-lg-column nav-tabs" role="tablist" aria-orientation="vertical">
-<!--               <a href="#challenge" class="nav-link d-block w-100 rounded-3 p-4 me-2 me-sm-3 me-lg-0 mb-lg-3 active" id="challenge-tab" data-bs-toggle="tab" role="tab" aria-controls="challenge" aria-selected="true">
-                <div class="fs-3 fw-bold">Challenge</div>
-              </a> -->
               <a href="#workshop" class="nav-link d-block w-100 rounded-3 p-4" id="workshop-tab" data-bs-toggle="tab" role="tab" aria-controls="workshop" aria-selected="false">
                 <div class="fs-3 fw-bold">Workshop</div>
               </a>
             </div>
-          </div>
+          </div> -->
           <div class="col-lg-9 offset-lg-1">
             <!-- Tab panes -->
             <div class="tab-content">
