--- a/index.html
+++ b/index.html
@@ -430,7 +430,17 @@
           <h2 class="text-center text-sm-start pb-2 pb-lg-0">Invited Speakers</h2>
         </div>
         <div class="row">
-	<p>--TBD--</p>	
+	      <div class="col-md-3 py-3">
+                <div class="card card-body card-hover bg-light border-0 text-center mx-2">
+                  <img src="../data/hao.jpg" class="d-block rounded-circle mx-auto mb-3" width="162">
+                  <h5 class="fw-medium fs-lg mb-1"><a style="text-decoration:none" href="https://cseweb.ucsd.edu/~haosu/" target="_blank">Hao Su</a></h5>
+                  <p class="fs-sm mb-3">UCSD</p>
+                </div>
+              </div>
+	</div>
+      </section>
+		
+<!-- 	<p>--TBD--</p>	 -->
 
       <!-- Submission -->
       <section id="submission" class="bg-secondary py-5">
