--- a/index.html
+++ b/index.html
@@ -954,7 +954,7 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
 
               <div class="col-md-3 py-3">
                 <div class="card card-body card-hover bg-light border-0 text-center mx-2">
-                  <img src="../data/fangneng.jpeg" class="d-block rounded-circle mx-auto mb-3" width="162" alt="Ralph Edwards">
+                  <img src="../data/fangneng.jpg" class="d-block rounded-circle mx-auto mb-3" width="162" alt="Ralph Edwards">
                   <h5 class="fw-medium fs-lg mb-1"><a style="text-decoration:none" href="https://fnzhan.com/" target="_blank">Fangneng Zhan</a></h5>
                   <p class="fs-sm mb-3">MPI-INF</p>
                 </div>
