--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
             </p>
 		  
             <div style="text-align: center;">
-		<img src="../data/overview.png" width="1000">
+		<img src="../data/overview.jpg" width="1200">
 	    </div>
 <!--             <ul>
               <li>
