--- a/index.html
+++ b/index.html
@@ -462,16 +462,17 @@
                 </p>
                 <ul>
                     <strong>
-                    <li>Advances in neural fields, including NeRF and neural rendering.</li>
-                    <li>Encoding function and coordinate transformation in neural fields.</li>
+                    <li>Advances in neural fields, including NeRF, neural rendering, etc.</li>
                     <li>MLP-based neural fields versus Grid-based neural fields.</li>
+                    <li>Encoding function and coordinate transformation in neural fields.</li>
                     <li>Smoothness and robustness of neural fields.</li>
-                    <li>Generative models in neural fields.</li>
-                    <li>Analysis-by-synthesis with neural fields.</li>
-                    <li>Label transfer and correspondence learning in neural fields.</li>
-                    <li>Specific properties in 2D, 3D, 4D, etc., neural fields.</li>
-                    <li>Neural fields for science.</li>
-                    <li>Ethical considerations in neural fields.</li>
+                    <li>Frequency bias and 3D ambiguity of neural fields.</li>
+                    <li>Generative modeling of neural fields.</li>
+		    <li>Analysis-by-synthesis with neural fields.</li>
+                    <li>Neural fields in visual understanding.</li>
+                    <li>Optimizing neural fields with foundation models.</li>
+                    <li>Denoising, label propagation, correspondence, etc, in neural fields.</li>
+                    <li>Neural fields in robotics, physics, etc.</li>
                     </strong>
                 </ul>
 <!--                 <p>
@@ -543,37 +544,21 @@
                     <thead>
                       <tr>
                         <th class="event">Event</th>
-                        <th class="date">Date (Always 11:59 PM Pacific Time)</th>
+                        <th class="date">Date (Anywhere on Earth)</th>
                       </tr>
                     </thead>
                     <tbody>
                       <tr>
-                        <th scope="row">Site online</th>
-                        <td>Dec 20, 2022</td>
+                        <th scope="row">Workshop paper submission deadline</th>
+                        <td>Sep 29, 2023</td>
                       </tr>
                       <tr>
-                        <th scope="row">Release of training data and validation data</th>
-                        <td>Dec 25, 2022</td>
+                        <th scope="row">Decisions</th>
+                        <td>Oct 24, 2023</td>
                       </tr>
                       <tr>
-                        <th scope="row">Validation server online</th>
-                        <td>Jan 01, 2023</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">Release of test data, test server online</th>
-                        <td>Feb 15, 2023</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">Test results submission deadline, test server closed</th>
-                        <td>Feb 20, 2023</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">Fact sheets submission deadline</th>
-                        <td>Feb 20, 2023</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">Final test and rating results release to participants</th>
-                        <td>Feb 22, 2023</td>
+                        <th scope="row">Camera ready</th>
+                        <td>Oct 27, 2023</td>
                       </tr>
                     </tbody>
                   </table>
