--- a/index.html
+++ b/index.html
@@ -957,7 +957,7 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
                 <div class="card card-body card-hover bg-light border-0 text-center mx-2">
                   <img src="../data/anpei.jpg" class="d-block rounded-circle mx-auto mb-3" width="162" alt="Ralph Edwards">
                   <h5 class="fw-medium fs-lg mb-1"><a style="text-decoration:none" href="https://apchenstu.github.io/" target="_blank">Anpei Chen</a></h5>
-                  <p class="fs-sm mb-3">ETH Zürich and Uni of Tübingen</p>
+                  <p class="fs-sm mb-3">ETH Zürich & Uni of Tübingen</p>
                 </div>
               </div>
 	      
