--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
         </div>
       </section>
       <!-- tracks -->
-      <section id="tracks" class="bg-secondary py-5">
+      <section id="tracks" class="container py-5">
 <!--         <div class="row pt-4 pb-3">
           <h2 class="text-center text-sm-start pb-2 pb-lg-0">Challenge Tracks</h2>
         </div> -->
