--- a/index.html
+++ b/index.html
@@ -434,8 +434,32 @@
 	      <div class="col-md-3 py-3">
                 <div class="card card-body card-hover bg-light border-0 text-center mx-2">
                   <img src="../data/hao.jpg" class="d-block rounded-circle mx-auto mb-3" width="162">
+                  <h5 class="fw-medium fs-lg mb-1"><a style="text-decoration:none" href="https://www.vincentsitzmann.com/" target="_blank">Vincent sitzmann</a></h5>
+                  <p class="fs-sm mb-3">MIT</p>
+                </div>
+              </div>
+		
+	      <div class="col-md-3 py-3">
+                <div class="card card-body card-hover bg-light border-0 text-center mx-2">
+                  <img src="../data/hao.jpg" class="d-block rounded-circle mx-auto mb-3" width="162">
                   <h5 class="fw-medium fs-lg mb-1"><a style="text-decoration:none" href="https://cseweb.ucsd.edu/~haosu/" target="_blank">Hao Su</a></h5>
                   <p class="fs-sm mb-3">UCSD</p>
+                </div>
+              </div>
+		
+	      <div class="col-md-3 py-3">
+                <div class="card card-body card-hover bg-light border-0 text-center mx-2">
+                  <img src="../data/gan.jpg" class="d-block rounded-circle mx-auto mb-3" width="162">
+                  <h5 class="fw-medium fs-lg mb-1"><a style="text-decoration:none" href="http://people.csail.mit.edu/ganchuang/" target="_blank">Chuang Gan</a></h5>
+                  <p class="fs-sm mb-3">UMass Amherst & MIT-IBM Watson AI Lab</p>
+                </div>
+              </div>
+		
+	      <div class="col-md-3 py-3">
+                <div class="card card-body card-hover bg-light border-0 text-center mx-2">
+                  <img src="../data/gan.jpg" class="d-block rounded-circle mx-auto mb-3" width="162">
+                  <h5 class="fw-medium fs-lg mb-1"><a style="text-decoration:none" href="https://niessnerlab.org/members/matthias_niessner/profile.html" target="_blank">Matthias Nießner</a></h5>
+                  <p class="fs-sm mb-3">TUM</p>
                 </div>
               </div>
 		
