--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
 		
 	      <div class="col-md-3 py-3">
                 <div class="card card-body card-hover bg-light border-0 text-center mx-2">
-                  <img src="../data/hao.jpg" class="d-block rounded-circle mx-auto mb-3" width="162">
+                  <img src="../data/vincent.jpeg" class="d-block rounded-circle mx-auto mb-3" width="162">
                   <h5 class="fw-medium fs-lg mb-1"><a style="text-decoration:none" href="https://www.vincentsitzmann.com/" target="_blank">Vincent sitzmann</a></h5>
                   <p class="fs-sm mb-3">MIT</p>
                 </div>
@@ -457,7 +457,7 @@
 		
 	      <div class="col-md-3 py-3">
                 <div class="card card-body card-hover bg-light border-0 text-center mx-2">
-                  <img src="../data/Nießner.jpg" class="d-block rounded-circle mx-auto mb-3" width="162">
+                  <img src="../data/matthias.jpg" class="d-block rounded-circle mx-auto mb-3" width="162">
                   <h5 class="fw-medium fs-lg mb-1"><a style="text-decoration:none" href="https://niessnerlab.org/members/matthias_niessner/profile.html" target="_blank">Matthias Nießner</a></h5>
                   <p class="fs-sm mb-3">TUM</p>
                 </div>
