--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                 <div class="card card-body card-hover bg-light border-0 text-center mx-2">
                   <img src="../data/gan.jpg" class="d-block rounded-circle mx-auto mb-3" width="162">
                   <h5 class="fw-medium fs-lg mb-1"><a style="text-decoration:none" href="http://people.csail.mit.edu/ganchuang/" target="_blank">Chuang Gan</a></h5>
-                  <p class="fs-sm mb-3">UMass Amherst & MIT-IBM Watson AI Lab</p>
+                  <p class="fs-sm mb-3">UMass & MIT-IBM Watson AI Lab</p>
                 </div>
               </div>
 		
