--- a/index.html
+++ b/index.html
@@ -433,6 +433,14 @@
 		
 	      <div class="col-md-3 py-3">
                 <div class="card card-body card-hover bg-light border-0 text-center mx-2">
+                  <img src="../data/gordon.jpg" class="d-block rounded-circle mx-auto mb-3" width="162">
+                  <h5 class="fw-medium fs-lg mb-1"><a style="text-decoration:none" href="https://stanford.edu/~gordonwz/" target="_blank">Gordon Wetzstein</a></h5>
+                  <p class="fs-sm mb-3">Stanford University</p>
+                </div>
+              </div>
+		
+	      <div class="col-md-3 py-3">
+                <div class="card card-body card-hover bg-light border-0 text-center mx-2">
                   <img src="../data/vincent.jpeg" class="d-block rounded-circle mx-auto mb-3" width="162">
                   <h5 class="fw-medium fs-lg mb-1"><a style="text-decoration:none" href="https://www.vincentsitzmann.com/" target="_blank">Vincent Sitzmann</a></h5>
                   <p class="fs-sm mb-3">MIT</p>
@@ -452,6 +460,14 @@
                   <img src="../data/hao.jpg" class="d-block rounded-circle mx-auto mb-3" width="162">
                   <h5 class="fw-medium fs-lg mb-1"><a style="text-decoration:none" href="https://cseweb.ucsd.edu/~haosu/" target="_blank">Hao Su</a></h5>
                   <p class="fs-sm mb-3">UCSD</p>
+                </div>
+              </div>
+		
+	      <div class="col-md-3 py-3">
+                <div class="card card-body card-hover bg-light border-0 text-center mx-2">
+                  <img src="../data/jiajun.jpg" class="d-block rounded-circle mx-auto mb-3" width="162">
+                  <h5 class="fw-medium fs-lg mb-1"><a style="text-decoration:none" href="https://jiajunwu.com/" target="_blank">Jiajun Wu</a></h5>
+                  <p class="fs-sm mb-3">Stanford University</p>
                 </div>
               </div>
 		
