--- a/index.html
+++ b/index.html
@@ -1124,16 +1124,18 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
     <footer class="footer dark-mode bg-dark pt-5 pb-4 pb-lg-5">
       <div class="container text-center pt-lg-3 opacity-90">
         <div class="navbar-brand justify-content-center text-dark mb-2 mb-lg-4">
-          <img src="../assets/img/logo.png" class="me-2" width="50" alt="Logo">
+          <img src="../assets/img/logo.png" class="me-2" width="35" alt="Logo">
           <span class="fs-4">Neural Fields in Principle</span>
 	</div>
         <p class="text-center text-light mt-lg-4 mb-0 opacity-90">
           Contact: 
-          <a href="mailto:mipi.challenge@gmail.com">fzhan@mpi-inf.mpg.de</a>
+          <a href="mailto:fzhan@mpi-inf.mpg.de">fzhan@mpi-inf.mpg.de</a> &nbsp;&nbsp;  <span class="text-light"> Copyright &copy; Neural Fields in Principle
         </div>
-        <p class="fs-sm text-center pt-3 mt-lg-4 mb-0 opacity-90">
+<!--         <p class="fs-sm text-center pt-3 mt-lg-4 mb-0 opacity-90">
           <span class="text-light"> Copyright &copy; Neural Fields in Principle 2023
-        </p>
+        </p> -->
+	<br>
+	<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=500&t=n&d=46xpoU7l0x175HX9OM1n3Cbf9JxW9Yd2HmDFVmTEatk&co=78beef&ct=ffffff'></script>
       </div>
     </footer>
 
