--- a/index.html
+++ b/index.html
@@ -1052,46 +1052,65 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
         </div>
       </section>
 
-    <!-- Sponsors -->
-    <!-- <style>
-      .img-container {
-        text-align: center;
-        display: block;
-      }
-    </style>
-    <section id="sponsors" class="bg-secondary py-5">
-      <div class="container">
-        <div class="row pt-4 pb-3">
-          <h2 class="text-center text-sm-start pb-2 pb-lg-0">Sponsors</h2>
-        </div>
-        <div class="row", style="justify-content:center;">          
-          <div class="col-md-3">
-            <div class="swiper-slide py-3">
-              <a href="https://www.shlab.org.cn/" class="card card-body card-hover px-2 mx-2", target="_blank">
-                <img src="../assets/img/brands/shanghai_ai_lab1.png" class="d-block mx-auto my-2" width="180" alt="Shanghai AI Lab">
-              </a>
-            </div>
-          </div>
-          &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
-          <div class="col-md-3">
-            <div class="swiper-slide py-3">
-              <a href="https://www.sony.net/" class="card card-body card-hover px-2 mx-2", target="_blank">
-                <img src="../assets/img/brands/sony.png" class="d-block mx-auto my-2" width="200" alt="NTU">
-              </a>
-            </div>
-          </div>
-          &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
-          <div class="col-md-3">
-            <div class="swiper-slide py-3">
-              <a href="https://www.ntu.edu.sg/" class="card card-body card-hover px-2 mx-2", target="_blank">
-                <img src="../assets/img/brands/ntu.png" class="d-block mx-auto my-2" width="200" alt="NTU">
-              </a>
-            </div>
-          </div>
+	ul {
+	  display: grid;
+	  grid-template-columns: repeat(2, 1fr);
+	}
 
+      <section id="submission" class="bg-secondary py-5">
+        <div class="container">
+          <div class="row pt-4 pb-3">
+            <h2 class="text-center text-sm-start pb-2 pb-lg-0">Program Committee</h2>
+          </div>
+<!--           <div class="row pt-4 pb-3">
+            <h4 class="text-center text-sm-start pb-2 pb-lg-0">NeurIPS 2023 Workshop:</h4>
+          </div> -->
+          <div class="row">
+            <div class="col">
+                <ul>
+                    <li>Kunhao Liu (Nanyang Technological University)</li>
+                    <li>Jiahui Zhang (Nanyang Technological University)</li>
+                    <li>Muyu Xu (Nanyang Technological University)</li>
+                    <li>Zuhao Yang (Nanyang Technological University)</li>
+                    <li>Yingchen Yu (Nanyang Technological University)</li>
+                    <li>Weijing Tao (Nanyang Technological University)</li>
+		    <li>Kunyang Li (Nanyang Technological University)</li>
+                    <li>Guoxing Sun (Max Planck Institute for Informatics)</li>
+<!--                     <li>Neural fields in robotics, physics, etc.</li> -->
+                </ul>
+<!--                 <p>
+                  Papers will be peer-reviewed and comply with the CVPR 2023 proceedings style, format and length. 
+                  The deadline for camera ready submission is the same as the main conference. 
+                  Papers accepted must be registered and presented to ensure their inclusion in the IEEE Xplore Library. 
+                  Selected papers will be invited to present in the workshop. Some papers will also be invited to contribute to
+                   a book chapter or a special issue article in our future publication.
+                  The format for submission is the same as the
+                    <a href="https://cvpr2023.thecvf.com/Conferences/2023/CallForPapers">
+                        CVPR 2023 requirements
+                    </a>. 
+                </p> -->
+                <p>
+                    Paper submission and review site:
+                    <a href="https://cmt3.research.microsoft.com/MIPI2023/Submission/Index", class="badge bg-success shadow-success fs-sm", target="_blank">
+                        <strong>Submission Site</strong>
+                    </a>
+                </p>
+                <br>
+              </div>
         </div>
-      </div>
-    </section> -->
+
+
+
+<!--       <section id="schedule" class="bg-secondary py-5">
+        <div class="container">
+          <div class="row pt-4 pb-3">
+            <h2 class="text-center text-sm-start pb-2 pb-lg-0">Program Committee</h2>
+          </div>
+          <p>--TBD--</p>
+         </div>
+      </section> -->
+
+
 
     <!-- Previous MIPI -->
     <style>
@@ -1100,24 +1119,9 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
         display: block;
       }
     </style>
-<!--     <section id="previous" class="bg-secondary py-5">
-      <div class="container">
-        <div class="row pt-4 pb-3">
-          <h2 class="text-center text-sm-start pb-2 pb-lg-0">Previous MIPI</h2>
-        </div>
-        <div class="row", style="justify-content:center;">          
-          <div class="col-md-3">
-            <div class="swiper-slide py-3">
-              <a href="../MIPI2022/" class="card card-hover px-2 mx-2", style='text-align:center', target="_blank">
-                <img src="../assets/img/previous_mipi/mipi2022.jpg" class="d-block mx-auto my-2" width="250" alt="MIPI 2022">
-                <div>MIPI@ECCV 2022</div>
-              </a>
-            </div>
-          </div>
 
-        </div>
-      </div>
-    </section> -->
+<!--   <br> -->
+<!--   <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=500&t=n&d=46xpoU7l0x175HX9OM1n3Cbf9JxW9Yd2HmDFVmTEatk&co=78beef&ct=ffffff'></script> -->
 
   </main>
     <!-- Footer -->
@@ -1134,8 +1138,6 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
 <!--         <p class="fs-sm text-center pt-3 mt-lg-4 mb-0 opacity-90">
           <span class="text-light"> Copyright &copy; Neural Fields in Principle 2023
         </p> -->
-	<br>
-	<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=500&t=n&d=46xpoU7l0x175HX9OM1n3Cbf9JxW9Yd2HmDFVmTEatk&co=78beef&ct=ffffff'></script>
       </div>
     </footer>
 
