--- a/index.html
+++ b/index.html
@@ -585,8 +585,8 @@
           <div class="col-lg-9 offset-lg-1">
             <!-- Tab panes -->
             <div class="tab-content">
-              <!-- Challenge -->
-              <div class="tab-pane fade show active" id="challenge" role="tabpanel" aria-labelledby="challenge-tab">
+              <!-- Workshop -->
+              <div class="tab-pane fade show active" id="workshop" role="tabpanel" aria-labelledby="workshop-tab">
                 <div class="table-responsive">
                   <table class="table">
                     <thead>
@@ -612,49 +612,8 @@
                   </table>
                 </div>
               </div>
-              <!-- Workshop -->
-              <div class="tab-pane fade" id="workshop" role="tabpanel" aria-labelledby="workshop-tab">
-                <div class="table-responsive">
-                  <table class="table">
-                    <thead>
-                      <tr>
-                        <th class="event">Event</th>
-                        <th class="date">Date (Always 11:59 PM Pacific Time)</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <th scope="row">Site online</th>
-                        <td>Dec 20, 2022</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">CMT online</th>
-                        <td>Dec 20, 2022</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">Paper submission deadline</th>
-                        <td><s>Feb 12, 2023</s> &nbsp; March 10, 2023</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">Supplementary materials deadline</th>
-                        <td><s>Feb 12, 2023</s> &nbsp; March 10, 2023</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">Notification to authors</th>
-                        <td><s>Feb 27, 2023</s> &nbsp; March 20, 2023</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">Camera ready deadline</th>
-                        <td>Apr 08, 2023</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">Workshop date</th>
-                        <td>Jun 18, 2023</td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
-              </div>
+
+
             </div>
           </div>
         </div>
@@ -1052,19 +1011,46 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
         </div>
       </section>
 
-	ul {
-	  display: grid;
-	  grid-template-columns: repeat(2, 1fr);
-	}
 
-      <section id="submission" class="bg-secondary py-5">
+      <section id="dates" class="container py-5">
+        <div class="row pt-4 pb-3">
+          <div class="col-12">
+            <h2 class="text-center text-sm-start pb-2 pb-lg-0 mb-4 mb-lg-5">Program Committee</h2>
+          </div>
+          <div class="col-lg-9 offset-lg-1">
+            <div class="tab-content">
+              <!-- Workshop -->
+              <div class="tab-pane fade show active" id="workshop" role="tabpanel" aria-labelledby="workshop-tab">
+                <div class="table-responsive">
+                  <table class="table">
+                    <thead>
+                      <tr>
+                        <th class="event">Event</th>
+                        <th class="date">Date (Anywhere on Earth)</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+			<td>Kunhao Liu (Nanyang Technological University)</td>
+                        <td>Jiahui Zhang (Nanyang Technological University)</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+
+
+            </div>
+          </div>
+        </div>
+      </section>
+
+
+<!--       <section id="submission" class="bg-secondary py-5">
         <div class="container">
           <div class="row pt-4 pb-3">
             <h2 class="text-center text-sm-start pb-2 pb-lg-0">Program Committee</h2>
           </div>
-<!--           <div class="row pt-4 pb-3">
-            <h4 class="text-center text-sm-start pb-2 pb-lg-0">NeurIPS 2023 Workshop:</h4>
-          </div> -->
           <div class="row">
             <div class="col">
                 <ul>
@@ -1076,28 +1062,10 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
                     <li>Weijing Tao (Nanyang Technological University)</li>
 		    <li>Kunyang Li (Nanyang Technological University)</li>
                     <li>Guoxing Sun (Max Planck Institute for Informatics)</li>
-<!--                     <li>Neural fields in robotics, physics, etc.</li> -->
                 </ul>
-<!--                 <p>
-                  Papers will be peer-reviewed and comply with the CVPR 2023 proceedings style, format and length. 
-                  The deadline for camera ready submission is the same as the main conference. 
-                  Papers accepted must be registered and presented to ensure their inclusion in the IEEE Xplore Library. 
-                  Selected papers will be invited to present in the workshop. Some papers will also be invited to contribute to
-                   a book chapter or a special issue article in our future publication.
-                  The format for submission is the same as the
-                    <a href="https://cvpr2023.thecvf.com/Conferences/2023/CallForPapers">
-                        CVPR 2023 requirements
-                    </a>. 
-                </p> -->
-                <p>
-                    Paper submission and review site:
-                    <a href="https://cmt3.research.microsoft.com/MIPI2023/Submission/Index", class="badge bg-success shadow-success fs-sm", target="_blank">
-                        <strong>Submission Site</strong>
-                    </a>
-                </p>
                 <br>
               </div>
-        </div>
+        </div> -->
 
 
 
