--- a/index.html
+++ b/index.html
@@ -1023,14 +1023,18 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
               <div class="tab-pane fade show active" id="workshop" role="tabpanel" aria-labelledby="workshop-tab">
                 <div class="table-responsive">
                   <table class="table">
-                    <thead>
+<!--                     <thead>
                       <tr>
                         <th class="event">Event</th>
                         <th class="date">Date (Anywhere on Earth)</th>
                       </tr>
-                    </thead>
+                    </thead> -->
                     <tbody>
                       <tr>
+			<td>Kunhao Liu (Nanyang Technological University)</td>
+                        <td>Jiahui Zhang (Nanyang Technological University)</td>
+                      </tr>
+		      <tr>
 			<td>Kunhao Liu (Nanyang Technological University)</td>
                         <td>Jiahui Zhang (Nanyang Technological University)</td>
                       </tr>
