--- a/index.html
+++ b/index.html
@@ -1022,23 +1022,18 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
               <!-- Workshop -->
               <div class="tab-pane fade show active" id="workshop" role="tabpanel" aria-labelledby="workshop-tab">
                 <div class="table-responsive">
-                  <table class="table">
-<!--                     <thead>
-                      <tr>
-                        <th class="event">Event</th>
-                        <th class="date">Date (Anywhere on Earth)</th>
-                      </tr>
-                    </thead> -->
-                    <tbody>
-                      <tr>
-			<td>Kunhao Liu (Nanyang Technological University)</td>
-                        <td>Jiahui Zhang (Nanyang Technological University)</td>
-                      </tr>
+<!--                   <table class="table"> -->
+		  <table>
+<!--                     <tbody> -->
 		      <tr>
 			<td>Kunhao Liu (Nanyang Technological University)</td>
-                        <td>Jiahui Zhang (Nanyang Technological University)</td>
-                      </tr>
-                    </tbody>
+			<td>Jiahui Zhang (Nanyang Technological University)</td>
+		      </tr>
+		      <tr>
+			<td>Kunhao Liu (Nanyang Technological University)</td>
+			<td>Jiahui Zhang (Nanyang Technological University)</td>
+		      </tr>
+<!--                     </tbody> -->
                   </table>
                 </div>
               </div>
