--- a/index.html
+++ b/index.html
@@ -1024,7 +1024,7 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
                 <div class="table-responsive">
 <!--                   <table class="table"> -->
 		  <table>
-<!--                     <tbody> -->
+                    <tbody>
 		      <tr>
 			<td>Kunhao Liu (Nanyang Technological University)</td>
 			<td>Jiahui Zhang (Nanyang Technological University)</td>
@@ -1033,7 +1033,7 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
 			<td>Kunhao Liu (Nanyang Technological University)</td>
 			<td>Jiahui Zhang (Nanyang Technological University)</td>
 		      </tr>
-<!--                     </tbody> -->
+                    </tbody>
                   </table>
                 </div>
               </div>
