--- a/index.html
+++ b/index.html
@@ -1030,8 +1030,8 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
 			<td>Jiahui Zhang (Nanyang Technological University)</td>
 		      </tr>
 		      <tr>
-			<td>Kunhao Liu (Nanyang Technological University)</td>
-			<td>Jiahui Zhang (Nanyang Technological University)</td>
+			<td>Muyu Xu (Nanyang Technological University)</td>
+			<td>Zuhao Yang (Nanyang Technological University)</td>
 		      </tr>
                     </tbody>
                   </table>
