--- a/index.html
+++ b/index.html
@@ -1027,6 +1027,7 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
                     <tbody>
 		      <tr>
 			<td>Kunhao Liu (Nanyang Technological University)</td>
+			    <span style="padding-left: 5px;">
 			<td>Jiahui Zhang (Nanyang Technological University)</td>
 		      </tr>
 		      <tr>
@@ -1100,11 +1101,12 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
 	</div>
         <p class="text-center text-light mt-lg-4 mb-0 opacity-90">
           Contact: 
-          <a href="mailto:fzhan@mpi-inf.mpg.de">fzhan@mpi-inf.mpg.de</a> &nbsp;&nbsp;  <span class="text-light"> Copyright &copy; Neural Fields in Principle
+          <a href="mailto:fzhan@mpi-inf.mpg.de">fzhan@mpi-inf.mpg.de</a> 
+<!-- 		&nbsp;&nbsp;  <span class="text-light"> Copyright &copy; Neural Fields in Principle -->
         </div>
-<!--         <p class="fs-sm text-center pt-3 mt-lg-4 mb-0 opacity-90">
-          <span class="text-light"> Copyright &copy; Neural Fields in Principle 2023
-        </p> -->
+        <p class="fs-sm text-center pt-3 mt-lg-4 mb-0 opacity-90">
+          <span class="text-light"> Copyright &copy; Neural Fields in Principle
+        </p>
       </div>
     </footer>
 
