--- a/index.html
+++ b/index.html
@@ -1027,11 +1027,11 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
                     <tbody>
 		      <tr>
 			<td>Kunhao Liu (Nanyang Technological University)</td>
-			<td><span style="padding-left: 5px;">Jiahui Zhang (Nanyang Technological University)</td>
+			<td><span style="padding-left: 50px;">Jiahui Zhang (Nanyang Technological University)</td>
 		      </tr>
 		      <tr>
 			<td>Muyu Xu (Nanyang Technological University)</td>
-			<td>Zuhao Yang (Nanyang Technological University)</td>
+			<td><span style="padding-left: 50px;">Zuhao Yang (Nanyang Technological University)</td>
 		      </tr>
                     </tbody>
                   </table>
