--- a/index.html
+++ b/index.html
@@ -1026,12 +1026,20 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
 		  <table>
                     <tbody>
 		      <tr>
-			<td>Kunhao Liu (Nanyang Technological University)</td>
-			<td><span style="padding-left: 50px;">Jiahui Zhang (Nanyang Technological University)</td>
+			<td>Kunhao Liu (Nanyang Technological University)<span style="padding-left: 300px;"></td>
+			<td>Jiahui Zhang (Nanyang Technological University)</td>
 		      </tr>
 		      <tr>
-			<td>Muyu Xu (Nanyang Technological University)</td>
-			<td><span style="padding-left: 50px;">Zuhao Yang (Nanyang Technological University)</td>
+			<td>Muyu Xu (Nanyang Technological University)<span style="padding-left: 300px;"></td>
+			<td>Zuhao Yang (Nanyang Technological University)</td>
+		      </tr>
+		      <tr>
+			<td>Yingchen Yu (Nanyang Technological University)<span style="padding-left: 300px;"></td>
+			<td>Weijing Tao (Nanyang Technological University)</td>
+		      </tr>
+		      <tr>
+			<td>Kunyang Li (Nanyang Technological University)<span style="padding-left: 300px;"></td>
+			<td>Guoxing Sun (Max Planck Institute for Informatics)</td>
 		      </tr>
                     </tbody>
                   </table>
