--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                   <a href="#organizers" class="nav-link">Organizers</a>
                 </li>
                 <li class="nav-item">
-                  <a href="#comittee" class="nav-link">Program Committee</a>
+                  <a href="#committee" class="nav-link">Program Committee</a>
                 </li>
 <!--                 <li class="nav-item">
                   <a href="#previous" class="nav-link">Previous MIPI</a>
@@ -715,9 +715,11 @@
 
       <section id="committee" class="bg-secondary py-5">
         <div class="row pt-4 pb-3">
-          <div class="col-12">
+	  <h2 class="text-center text-sm-start pb-2 pb-lg-0">Program Committee</h2>
+<!--           <div class="col-12">
             <h2 class="text-center text-sm-start pb-2 pb-lg-0 mb-4 mb-lg-5">Program Committee</h2>
-          </div>
+          </div> -->
+		
           <div class="col-lg-9 offset-lg-1">
             <div class="tab-content">
               <!-- Workshop -->
