--- a/index.html
+++ b/index.html
@@ -711,11 +711,20 @@
 		
         </div>
       </section>
+	    
+	    
+<!-- 	          <section id="submission" class="bg-secondary py-5">
+        <div class="container">
+          <div class="row pt-4 pb-3">
+            <h2 class="text-center text-sm-start pb-2 pb-lg-0">Call for Papers</h2>
+          </div> -->
 
 
       <section id="committee" class="bg-secondary py-5">
-        <div class="row pt-4 pb-3">
-	  <h2 class="text-center text-sm-start pb-2 pb-lg-0">Program Committee</h2>
+	<div class="container">
+          <div class="row pt-4 pb-3">
+	    <h2 class="text-center text-sm-start pb-2 pb-lg-0">Program Committee</h2>
+	  </div>
 <!--           <div class="col-12">
             <h2 class="text-center text-sm-start pb-2 pb-lg-0 mb-4 mb-lg-5">Program Committee</h2>
           </div> -->
