--- a/index.html
+++ b/index.html
@@ -479,6 +479,14 @@
 		
 	      <div class="col-md-3 py-3">
                 <div class="card card-body card-hover bg-light border-0 text-center mx-2">
+                  <img src="../data/lingjie.jpeg" class="d-block rounded-circle mx-auto mb-3" width="162">
+                  <h5 class="fw-medium fs-lg mb-1"><a style="text-decoration:none" href="https://jiajunwu.com/" target="_blank">Lingjie Liu</a></h5>
+                  <p class="fs-sm mb-3">Upenn</p>
+                </div>
+              </div>
+		
+	      <div class="col-md-3 py-3">
+                <div class="card card-body card-hover bg-light border-0 text-center mx-2">
                   <img src="../data/hao.jpg" class="d-block rounded-circle mx-auto mb-3" width="162">
                   <h5 class="fw-medium fs-lg mb-1"><a style="text-decoration:none" href="https://cseweb.ucsd.edu/~haosu/" target="_blank">Hao Su</a></h5>
                   <p class="fs-sm mb-3">UCSD</p>
