--- a/index.html
+++ b/index.html
@@ -518,16 +518,14 @@
                 </p>
                 <ul>
                     <strong>
-                    <li>Advances in neural fields, including NeRF, neural rendering, etc.</li>
+                    <li>Advances in neural fields, including neural scene representation, neural rendering, etc.</li>
+                    <li>Properties of neural fields, e.g., smoothness, robustness, and frequency bias, etc.</li>
+                    <li>Capabilities of neural fields, e.g., denoising, label propagation, etc.</li>
                     <li>MLP-based neural fields versus Grid-based neural fields.</li>
                     <li>Encoding function and coordinate transformation in neural fields.</li>
-                    <li>Smoothness and robustness of neural fields.</li>
-                    <li>Frequency bias and 3D ambiguity of neural fields.</li>
                     <li>Generative modeling of neural fields.</li>
 		    <li>Analysis-by-synthesis with neural fields.</li>
-                    <li>Neural fields in visual understanding.</li>
-                    <li>Optimizing neural fields with foundation models.</li>
-                    <li>Denoising, label propagation, correspondence, etc, in neural fields.</li>
+                    <li>Neural fields in visual understanding and foundation models.</li>
                     <li>Neural fields in robotics, physics, etc.</li>
                     </strong>
                 </ul>
@@ -751,20 +749,48 @@
 		  <table>
                     <tbody>
 		      <tr>
+			<td>Guoxing Sun (Max Planck Institute for Informatics)<span style="padding-left: 200px;"></td>
+			<td>Pramod Rao (Max Planck Institute for Informatics)</td>
+		      </tr>
+		      <tr>
+			<td>Junaid Wahid (Saarland University)<span style="padding-left: 200px;"></td>
+			<td>Chi Yu (Technical University of Munich)</td>
+		      </tr>
+		      <tr>
+			<td>Pulkit Gera (Max Planck Institute for Informatics)<span style="padding-left: 200px;"></td>
+			<td>Heming Zhu (Max Planck Institute for Informatics)</td>
+		      </tr>
+		      <tr>
 			<td>Kunhao Liu (Nanyang Technological University)<span style="padding-left: 200px;"></td>
 			<td>Jiahui Zhang (Nanyang Technological University)</td>
+		      </tr>
+		      <tr>
+			<td>Leonhard Sommer (University of Freiburg)<span style="padding-left: 200px;"></td>
+			<td>Artur Jesslen (University of Freiburg)</td>
 		      </tr>
 		      <tr>
 			<td>Muyu Xu (Nanyang Technological University)<span style="padding-left: 200px;"></td>
 			<td>Zuhao Yang (Nanyang Technological University)</td>
 		      </tr>
 		      <tr>
+			<td>Rongliang Wu (A*STAR)<span style="padding-left: 200px;"></td>
+			<td>Kunyang Li (Nanyang Technological University)</td>
+		      </tr>
+		      <tr>
 			<td>Yingchen Yu (Nanyang Technological University)<span style="padding-left: 200px;"></td>
 			<td>Weijing Tao (Nanyang Technological University)</td>
 		      </tr>
 		      <tr>
-			<td>Kunyang Li (Nanyang Technological University)<span style="padding-left: 200px;"></td>
-			<td>Guoxing Sun (Max Planck Institute for Informatics)</td>
+			<td>Quan Meng (Technical University of Munich)<span style="padding-left: 200px;"></td>
+			<td>Zehao Yu (University of Tübingen)</td>
+		      </tr>
+		      <tr>
+			<td>Haiwen Wang (University of Tübingen)<span style="padding-left: 200px;"></td>
+			<td>Shaofeng Wang (ETH Zürich and University of Tübingen)</td>
+		      </tr>
+	              <tr>
+			<td>Haofei Xu (ETH Zürich and University of Tübingen)<span style="padding-left: 200px;"></td>
+			<td> </td>
 		      </tr>
                     </tbody>
                   </table>
