--- a/index.html
+++ b/index.html
@@ -805,18 +805,15 @@
         </div>
       </section>
 	
+<!--       <br>
       <br>
-      <br>
-      <br>
+      <br> -->
 	    
-      <section id="organizers" class="container py-5">
+<!--       <section id="organizers" class="container py-5">
         <div class="container">
-<!--           <div class="row pt-4 pb-3">
-            <h2 class="text-center text-sm-start pb-2 pb-lg-0">Clustrmaps</h2>
-          </div> -->
 	    <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=500&t=n&d=46xpoU7l0x175HX9OM1n3Cbf9JxW9Yd2HmDFVmTEatk&co=78beef&ct=ffffff'></script>
 	</div>
-      </section>
+      </section> -->
 
 
 
